--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -3,6 +3,11 @@
 
 <% @members[0..24].each do |member| %>
   <h3>Name: <%= member[:name] %></h3>
+  <% if member[:photoUrl].present? %>
+      <img src="<%= member[:photoUrl] %>" alt="Image of <%= member[:name] %>" />
+    <% else %>
+      <p>No image available</p>
+    <% end %> </br>
   Allies: <%= member[:allies] %> </br>
   Enemies: <%= member[:enemies] %> </br>
   Affiliations: <%= member[:affiliation] %> </br>
